--- a/styles/layouts/index.module.scss
+++ b/styles/layouts/index.module.scss
@@ -52,13 +52,18 @@
       display: grid;
       grid-gap: 2rem;
       justify-items: center;
+      max-width: 100vw;
 
       .carousel {
             overflow-x: scroll;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-gap: 2rem;
-            width: 100%;
+            width: 90vw;
+            -webkit-overflow-scrolling: touch;
+            -ms-overflow-style: none;
+            scrollbar-width: 16px;
+            scrollbar-base-color: #F3603C;
       }
 }
 
